# zeabur-extend-trial

./: .env.example  Dockerfile  Makefile  README.md  checkin.sh  cronjob  crontab  pyproject.toml  requirements.txt
tests/: test_checkin.py
zeabur_extend_trial/: main.py
